notes/devops/kubernetes/resources/busybox.po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - tail
    - -f
    - '/dev/null'
