notes/devops/kubernetes/resources/traefik-edge.ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-edge
  labels:
    app: traefik-edge
spec:
  selector:
    matchLabels:
      app: traefik-edge
  template:
    metadata:
      labels:
        app: traefik-edge
    spec:
      nodeSelector:
        # 自定义节点标签
        node.type: edge
      containers:
      - name: traefik
        image: traefik:2.2
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: config
          mountPath: "/etc/traefik/"
          readOnly: true
      terminationGracePeriodSeconds: 30

      volumes:
        - name: config
          configMap:
            name: traefik-edge

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-edge
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: ui
      port: 8080
  selector:
    app: traefik-edge

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-edge
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: ui
      port: 8080
  selector:
    app: traefik-edge
