notes/devops/kubernetes/resources/nginx.ing.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: nginx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: nginx.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
